# metnum-project3

./: README.md
codigo/: CMakeLists.txt
codigo/src/: comparador.cpp  main.cpp
codigo/src/code/: Args.cpp  Args.h  CML.cpp  CML.h  Config.h  Distances.cpp  Distances.h  Loaders.cpp  Loaders.h  Metrics.cpp  Metrics.h  Noise.cpp  Noise.h  RaysGen.cpp  RaysGen.h  Types.h
codigo/src/code/tools/: Eigenvectors.cpp  Eigenvectors.h  Lineal.cpp  Lineal.h  Prints.cpp  Prints.h  SVD.cpp  SVD.h
codigo/tests/: test_CML.cpp  test_Lineal.cpp  test_Metrics.cpp  test_SVD.cpp  test_distances.cpp  test_times.cpp
codigo/tests/google-test/: gtest.cbp
conversor_csv/: README.txt  csv_converter.py  csv_visualizer.py
data/: .gitignore
data-csv/: phantom-128.csv  phantom-16.csv  phantom-32.csv  phantom-64.csv  phantom-8.csv  phantom.csv  prueba.csv  tests.csv  tomo-10.csv  tomo-25.csv  tomo-5.csv  tomo-50.csv  tomo.csv  tomo2-10.csv  tomo2-135.csv  tomo2-20.csv  tomo2-36.csv  tomo2-60.csv  tomo2-90.csv  tomo2.csv  tomo3-10.csv  tomo3-18.csv  tomo3-30.csv  tomo3-50.csv  tomo3-75.csv  tomo3-90.csv  tomo3.csv
experimentacion/: eigens.py  eigens_time.py  noise.py  rays_n.py  rays_n_time.py
graficos/: eigen_graph.py  eigen_times_graph.py  noise_graphs.py  rays_n_graph.py  size_graph.py  util.py
informe/: .gitignore  Makefile  apendices.tex  caratula.sty  caratula.tex  conclusiones.tex  desarrollo.tex  experimentacion.tex  informe.tex  introduccion-teorica.tex  introduccion.tex  referencias.tex  resumen.tex
presentacion/: .gitignore  transparencias.tex
(+4770 files in other folders)
